fixed spacing

--- a/src/Home.css
+++ b/src/Home.css
@@ -95,15 +95,9 @@
   justify-content: space-between;
 }
 
-.mobilemenutitle {
-  padding-left: 50px;
-  font-size: 35px;
-  font-weight: bold;
-}
-
 .mobilemenuPic {
-  display: grid;
-  justify-content: center;
+  height: 30px;
+  width: 50px;
 }
 
 .mobilebody2 {
